--- a/src/views/signup.ejs
+++ b/src/views/signup.ejs
@@ -15,6 +15,17 @@
           <li><%= error.message %></li>
           <% }) %> <% } %>
           </ul>
+          <ul>
+            <% if(messages.success_msg) { %>
+            <li><%= messages.success_msg %></li>
+            <% } %>
+          </ul>
+      
+          <ul>
+            <% if (messages.error) { %>
+            <li><%= messages.error %></li>
+            <% } %>
+          </ul>
         <form method="POST" action="/signup">
           <label for="email">Email:</label>
           <input type="email" id="email" name="email" required>
