Authentication: Admin and user dashboard

--- a/src/views/signup.ejs
+++ b/src/views/signup.ejs
@@ -37,6 +37,8 @@
           <input type="password" id="password2" name="password2" required>
           
           <input type="submit" value="Sign Up">
+          <br>
+          <p>Already have an account? <a href="/login">login</a></p>
         </form>
       </div>
 </body>
