--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -37,7 +37,7 @@
           <input type="submit" value="Login">
         </form>
         <p>Don't have an account? <a href="/signup">Sign up</a></p>
-      <p>Forgot your password? <a href="/reset-password">Reset password</a></p>
+      <p>Forgot your password? <a href="/request-resetPd">Reset password</a></p>
       </div>
 </body>
 </html>
