--- a/src/views/user-dashboard.ejs
+++ b/src/views/user-dashboard.ejs
@@ -5,33 +5,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My dashboard</title>
+    <link rel="stylesheet" href="/user-dashboard.css">
 </head>
 <body>
     <p>User dashboard</p>
     <p>User's dashboard</p>
     <div class="container">
         <h1>User Page</h1>
-    
-        <!-- File List -->
+        <div class="file-list">
+             <!-- File List -->
         <% if (files && files.length > 0) { %>
             <% files.forEach((file) => { %>
                 <div class="file-item">
                     <h3><%= file.title %></h3>
                     <p>Description: <%= file.description %></p>
                     <p>Filename: <%= file.filename %></p>
-                    <a href="/download/<%= file.filename %>">Download</a>
+                    <!-- <a href="/download/<%= file.filename %>">Download</a> -->
                     <form method="post" action="/send-email">
                         <input type="hidden" name="filename" value="<%= file.filename %>">
                         <label for="email">Email:</label>
                         <input type="email" name="email" id="email" required>
                         <input type="submit" value="Send via Email">
                     </form>
+                    <button class="download-button" onclick="window.location.href='/download/<%= file.filename %>'">Download</button>
                 </div>
             <% }); %>
         <% } else { %>
             <p>No files available.</p>
         <% } %>
     </div>
+        </div>
+       
     
 
 </body>
