--- a/src/views/update-password.ejs
+++ b/src/views/update-password.ejs
@@ -9,16 +9,16 @@
 </head>
 <body>
     <div class="container">
-        <form action="/reset-password" method="post">
+        <form action="/update-password" method="post">
             <label for="new-password">New Password:</label>
             <input type="password" id="newpassword" name="newpassword" required minlength="8" maxlength="20">
             <br>
             <label for="confirm-password">Confirm Password:</label>
             <input type="password" id="confirmpassword" name="confirmpassword" required minlength="8" maxlength="20">
             <br>
+            <input type="hidden" name="token" value="<%= token %>">
             <input type="submit" value="Submit">
-          </form>
-
+          </form>  
     </div>
     
 </body>
