--- a/src/views/admin-dashboard.ejs
+++ b/src/views/admin-dashboard.ejs
@@ -29,30 +29,33 @@
 
 
   <h3>Upload File:</h3>
-  <div class="card">
-<!-- Uploaded Files -->
-<% if (files && files.length > 0) { %>
-    <% files.forEach((file) => { %>
-      <div class="file-item">
-        <h3><%= file.title %></h3>
-        <p>Description: <%= file.description %></p>
-  
-       
-        <div class="counts">
-          <p>Downloads: <%= file.download_count || 0 %></p>
-          <p>Emails: <%= file.email_count || 0 %></p>
+  <div class="file-container">
+    <div class="card">
+      <!-- Uploaded Files -->
+      <% if (files && files.length > 0) { %>
+          <% files.forEach((file) => { %>
+            <div class="file-item">
+              <h3><%= file.title %></h3>
+              <p>Description: <%= file.description %></p>
+        
+             
+              <div class="counts">
+                <p>Downloads: <%= file.download_count || 0 %></p>
+                <p>Emails: <%= file.email_count || 0 %></p>
+              </div>
+              <a class="download-button" href="/uploads/<%= file.filename %>">Download</a>
+           
+            </div>
+          <% }); %>
+        <% } else { %>
+          <p>No files available.</p>
+        <% } %>
+        
         </div>
-        <a class="download-button" href="/uploads/<%= file.filename %>">Download</a>
-     
-      </div>
-    <% }); %>
-  <% } else { %>
-    <p>No files available.</p>
-  <% } %>
-  
+        
+            </div>
   </div>
-  
-      </div>
+ 
 
      
 </body>
