--- a/src/views/user-dashboard.ejs
+++ b/src/views/user-dashboard.ejs
@@ -24,35 +24,31 @@
           <br>
           
 
-        <div class="file-list">
-             <!-- File List -->
-             <% if (files && files.length > 0) { %>
-                <% files.forEach((file) => { %>
-                  <div class="file-item">
-                    <h3><%= file.title %></h3>
-                    <p>Description: <%= file.description %></p>
-                    <form method="post" action="/send-email/<%= file.filename %>">
-                      <input type="hidden" name="filename" value="<%= file.filename %>">
-                      <label for="email">Email:</label>
-                      <input type="email" name="email" id="email" value="<%= email %>" required>
-                      <button type="submit">Send via Email</button>
-                    </form>
-                    
-            
-                    <a class="download-button" href="/uploads/<%= file.filename %>">Download</a>
-
-                    <div class="counts">
-                      <p>Downloads: <%= file.download_count || 0 %></p>
-                      <p>Emails: <%= file.email_count || 0 %></p>
-                    </div>
-
+          <div class="file-list">
+            <!-- File List -->
+            <% if (typeof files !== 'undefined' && files.length > 0) { %>
+              <% files.forEach((file) => { %>
+                <div class="file-item">
+                  <h3><%= file.title %></h3>
+                  <p>Description: <%= file.description %></p>
+                  <form method="post" action="/send-email/<%= file.filename %>">
+                    <input type="hidden" name="filename" value="<%= file.filename %>">
+                    <label for="email">Email:</label>
+                    <input type="email" name="email" id="email" value="<%= email || '' %>" required>
+                    <button type="submit">Send via Email</button>
+                  </form>
+                  <a class="download-button" href="/uploads/<%= file.filename %>">Download</a>
+                  <div class="counts">
+                    <p>Downloads: <%= file.download_count || 0 %></p>
+                    <p>Emails: <%= file.email_count || 0 %></p>
                   </div>
-                <% }); %>
-              <% } else { %>
-                <p>No files available.</p>
-              <% } %>
-        
-    </div>
+                </div>
+              <% }); %>
+            <% } else { %>
+              <p>No files available.</p>
+            <% } %>
+          </div>
+          
         </div>
        
     
